Update .gitignore to include original_specification.md and remove CONTRIBUTING.md as part of project restructuring. Update author information in pyproject.toml to reflect current maintainer.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Advanced Python profiling and optimization framework"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
-    {name = "Pycroscope Team"}
+    {name = "Adam Murray"}
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
