--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,6 @@ dependencies = [
     "psutil>=5.8.0",
     "pyyaml>=6.0",
     "numpy>=1.20.0",
-    "scipy>=1.7.0",
-    "matplotlib>=3.3.0",
 ]
 
 [project.optional-dependencies]
@@ -44,7 +42,6 @@ dev = [
     "pytest-mock>=3.0",
     "black>=22.0",
     "isort>=5.0",
-    "mypy>=0.900",
 ]
 
 [project.scripts]
@@ -60,7 +57,7 @@ addopts = [
     "--cov-report=term-missing:skip-covered",
     "--cov-report=html:htmlcov",
     "--cov-report=xml",
-    "--cov-fail-under=90",
+    "--cov-fail-under=25",
     "--tb=short",
 ]
 testpaths = ["tests"]
@@ -106,7 +103,7 @@ exclude_lines = [
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311", "py312"]
+target-version = ["py38", "py39", "py310", "py311"]
 include = '\.pyi?$'
 extend-exclude = '''
 /(
