--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,14 +79,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          python -m pytest \
-            --cov=pycroscope \
-            --cov-report=term-missing \
-            --cov-report=xml \
-            --cov-report=html \
-            --cov-fail-under=25 \
-            --junitxml=pytest-results.xml \
-            -v
+          python -m pytest --cov=pycroscope --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=25 --junitxml=pytest-results.xml -v
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
@@ -131,7 +124,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e ".[test]"
+          python -m pip install -e ".[test,dev]"
 
       - name: Run integration tests
         run: |
@@ -176,7 +169,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e ".[test]"
+          python -m pip install -e ".[test,dev]"
 
       - name: Run performance benchmarks
         run: |
@@ -288,7 +281,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e ".[dev]"
+          python -m pip install -e ".[test,dev]"
 
       - name: Check docstring coverage
         run: |
