--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,8 +69,7 @@ jobs:
 
       - name: Verify installation
         run: |
-          python -c "import pycroscope; print('Pycroscope version:', pycroscope.__version__)"
-          python -c "from pycroscope import enable_profiling; print('Import successful')"
+          python tests/verify_installation.py
 
       - name: Run tests with coverage
         run: |
