--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "psutil>=5.8.0",
     "pyyaml>=6.0",
     "numpy>=1.20.0",
+    "scipy>=1.7.0",
+    "matplotlib>=3.3.0",
 ]
 
 [project.optional-dependencies]
