--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pycroscope"
-version = "2.0.0"
+version = "1.0.0"
 description = "Python performance analysis and visualization using established profiling tools"
 readme = "README.md"
 license = { text = "MIT" }
@@ -30,16 +30,15 @@ dependencies = [
     "click>=8.0.0",
     "psutil>=5.9.0",
     "line_profiler>=4.0.0",
-    "py-spy>=0.3.0;platform_system!='Windows'",
     
-    # Visualization and reporting dependencies
+    # Analysis dependencies for anti-pattern detection
+    "radon>=6.0.1",
+    "vulture>=2.6",
+    
+    # Visualization dependencies (actually used)
     "matplotlib>=3.5.0",
-    "seaborn>=0.11.0", 
-    "plotly>=5.0.0",
     "pandas>=1.3.0",
-    "jinja2>=3.0.0",
-    "rich>=12.0.0",
-    "tabulate>=0.9.0",
+    "numpy>=1.21.0",
 ]
 
 [project.optional-dependencies]
