Enhance test execution and coverage reporting
- Update the test workflow to utilize `pytest` directly, improving clarity and consistency in test execution.
- Modify the coverage reporting command to include branch coverage and adjust the coverage threshold to 50%.
- Upgrade the Codecov action to version 5, ensuring compatibility with the latest features and security practices.
- Refactor the test runner functions to accept additional command-line arguments, enhancing flexibility in test execution.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,13 +82,14 @@ jobs:
 
       - name: Run complete test suite with coverage
         run: |
-          python tests/run_tests.py all --cov-report=xml --cov-report=html --cov-fail-under=50
+          pytest --cov=src/pycroscope --cov-branch --cov-report=xml --cov-report=html --cov-fail-under=50 --verbose
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
-          file: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: Adiaslow/Pycroscope
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
